feat(multi-index): ease multi index and auto complete
This commit simplifies the syntax that need to be used in order to do multi indices queries.
You can use multi indices either in your instant search page, or when building an autocomplete.

BREAKING CHANGES:
* Reseting the pagination should be done at each connector level inside the "refine" function when returning the search state.
* The current page now appears inside the search state when a widget is used
* Query values are part of the items prop of the connectCurrentRefinements connector. Behaviour is unchanged, query will be filtered if clearsQuery prop is false.
* Add the index name to all the current refinements items. (not used by our widgets yet, but available if needed).

--- a/docgen/layouts/common/header.pug
+++ b/docgen/layouts/common/header.pug
@@ -41,6 +41,8 @@ nav.cm-navigation
           li
             a(href="widgets/InstantSearch.html", role='treeitem', data-link = 'true') #{'<InstantSearch>'}
           li
+            a(href="widgets/<Index>.html", role='treeitem', data-link = 'true') #{'<Index>'}
+          li
             a(href="widgets/", role='treeitem', data-link = 'true') Widgets
           li
             a(href="connectors/", role='treeitem', data-link = 'true') Connectors
