chore(react-instantsearch): move to react-instantsearch repo

--- a/docgen/layouts/common/footer.pug
+++ b/docgen/layouts/common/footer.pug
@@ -2,10 +2,10 @@ footer.ac-footer
   .ac-footer-container
     p.ac-footer-links
       | Code licensed under
-      a.ac-footer-link-item(href='https://raw.githubusercontent.com/algolia/instantsearch.js/develop/LICENSE') MIT
+      a.ac-footer-link-item(href='https://github.com/algolia/react-instantsearch/blob/master/LICENSE') MIT
       br
-      a.ac-footer-link-item(href='https://github.com/algolia/instantsearch.js/tree/v2') GitHub
-      a.ac-footer-link-item(href='https://github.com/algolia/instantsearch.js/issues') issues
+      a.ac-footer-link-item(href='https://github.com/algolia/react-instantsearch/') GitHub
+      a.ac-footer-link-item(href='https://github.com/algolia/react-instantsearch/issues') issues
       a.ac-footer-link-item(href = 'https://www.algolia.com/policies/privacy') Privacy policy
   .ac-footer-container.ac-footer-brand
     p This project is part of
