--- a/docgen/layouts/common/meta.pug
+++ b/docgen/layouts/common/meta.pug
@@ -9,13 +9,13 @@ html
     meta(content='Add instant-search and autocomplete to your React and React Native apps with a few lines of code. Powered by Algolia.', name='description')
     // / Twitter card
     meta(content='summary_large_image', name='twitter:card')
-    meta(content='https://community.algolia.com/instantsearch.js/react/', name='twitter:site')
+    meta(content='https://community.algolia.com/react-instantsearch/', name='twitter:site')
     meta(content='Algolia', name='twitter:creator')
     meta(content='React InstantSearch', name='twitter:title')
     meta(content='⚡ Lightning-fast search for React and React Native apps', name='twitter:description')
     meta(content='http://res.cloudinary.com/hilnmyskv/image/upload/v1481193392/meta-instant-search-react_hrf6st.jpg', name='twitter:image')
     // / OG meta
-    meta(content='https://community.algolia.com/instantsearch.js/react/', property='og:url')
+    meta(content='https://community.algolia.com/react-instantsearch/', property='og:url')
     meta(content='React InstantSearch', property='og:title')
     meta(content='http://res.cloudinary.com/hilnmyskv/image/upload/v1481193392/meta-instant-search-react_hrf6st.jpg', property='og:image')
     meta(content='website', property='og:type')
