--- a/docgen/layouts/common/header.pug
+++ b/docgen/layouts/common/header.pug
@@ -55,7 +55,7 @@ nav.cm-navigation
             a(href="examples/Recipes.html", role='treeitem', data-link = 'true') Recipes
 
       li.cm-menu__list__item
-        a(href='https://github.com/algolia/instantsearch.js/tree/v2', data-link = 'true')
+        a(href='https://github.com/algolia/react-instantsearch/', data-link = 'true')
           figure.github-icon
             svg(width='40px', height='39px')
               use(xlink:href='#github-icon')
