--- a/docgen/layouts/index.pug
+++ b/docgen/layouts/index.pug
@@ -241,7 +241,7 @@ block content
         ul
           li Share your awesome projects <svg><use xlink:href="#check-icon"></svg>
           li Find useful tips & solutions <svg><use xlink:href="#check-icon"></svg>
-        a(href="https://discourse.algolia.com/c/instantsearch", class="btn btn-ghost btn-ghost-blue") Join us on discourse&nbsp;&gt;
+        a(href="https://discourse.algolia.com/tags/react-instantsearch", class="btn btn-ghost btn-ghost-blue") Join us on discourse&nbsp;&gt;
 
     div.footer__call-to-action
       .container
