docs(cloudinary): Use https link for Cloudinary images (#115)
* docs(cloudinary): Use https link for Cloudinary images

The website was loading Cloudinary assets using and http protocol,
resulting in Mixed-Content warning and images not displayed.

* docs(https): fix typo

--- a/docgen/layouts/common/meta.pug
+++ b/docgen/layouts/common/meta.pug
@@ -13,11 +13,11 @@ html
     meta(content='Algolia', name='twitter:creator')
     meta(content='React InstantSearch', name='twitter:title')
     meta(content='⚡ Lightning-fast search for React and React Native apps', name='twitter:description')
-    meta(content='http://res.cloudinary.com/hilnmyskv/image/upload/v1481193392/meta-instant-search-react_hrf6st.jpg', name='twitter:image')
+    meta(content='https://res.cloudinary.com/hilnmyskv/image/upload/v1481193392/meta-instant-search-react_hrf6st.jpg', name='twitter:image')
     // / OG meta
     meta(content='https://community.algolia.com/react-instantsearch/', property='og:url')
     meta(content='React InstantSearch', property='og:title')
-    meta(content='http://res.cloudinary.com/hilnmyskv/image/upload/v1481193392/meta-instant-search-react_hrf6st.jpg', property='og:image')
+    meta(content='https://res.cloudinary.com/hilnmyskv/image/upload/v1481193392/meta-instant-search-react_hrf6st.jpg', property='og:image')
     meta(content='website', property='og:type')
     meta(content='⚡ Lightning-fast search for React and React Native apps', property='og:description')
     meta(content='React InstantSearch', property='og:site_name')
