--- a/docgen/layouts/common/header.pug
+++ b/docgen/layouts/common/header.pug
@@ -31,18 +31,23 @@ nav.cm-navigation
             svg
               use(xlink:href='#cancel-icon')
     ul.cm-menu__list
-      li.cm-menu__list__item(class=h.maybeActive(navPath, "Getting_started.html"))
-        a(href="Getting_started.html", data-link = 'true') Getting started
-      li.cm-menu__list__item(class=h.maybeActive(navPath, "learn/"))
-        a(aria-controls='dropdown-1', aria-expanded='false', data-toggle-dropdown='dropdown-1', class="dropdown-toggler") Learn <span class="glyph">&#x25BC;</span>
+      li.cm-menu__list__item(class=h.maybeActive(navPath, "getting_started/"))
+        a(aria-controls='dropdown-1', aria-expanded='false', data-toggle-dropdown='dropdown-1', class="dropdown-toggler") Getting Started <span class="glyph">&#x25BC;</span>
         ul#dropdown-1.simple-dropdown(role='tree', tabindex='-1')
+          li
+            a(href="Getting_Started.html", role='treeitem', data-link = 'true') React
+          li
+            a(href="Getting_Started_React_Native.html", role='treeitem', data-link = 'true') React Native
+      li.cm-menu__list__item(class=h.maybeActive(navPath, "learn/"))
+        a(aria-controls='dropdown-2', aria-expanded='false', data-toggle-dropdown='dropdown-2', class="dropdown-toggler") Learn <span class="glyph">&#x25BC;</span>
+        ul#dropdown-2.simple-dropdown(role='tree', tabindex='-1')
           li
             a(href="guide/", role='treeitem', data-link = 'true') Guides
           li
             a(href="videos/", role='treeitem', data-link = 'true') Videos
       li.cm-menu__list__item(class=h.maybeActive(navPath, ["widgets/", ["connectors/"]]))
-        a(aria-controls='dropdown-2', aria-expanded='false', data-toggle-dropdown='dropdown-2', class="dropdown-toggler") API <span class="glyph">&#x25BC;</span>
-        ul#dropdown-2.simple-dropdown(role='tree', tabindex='-1')
+        a(aria-controls='dropdown-3', aria-expanded='false', data-toggle-dropdown='dropdown-3', class="dropdown-toggler") API <span class="glyph">&#x25BC;</span>
+        ul#dropdown-3.simple-dropdown(role='tree', tabindex='-1')
           li
             a(href="widgets/InstantSearch.html", role='treeitem', data-link = 'true') #{'<InstantSearch>'}
           li
@@ -52,8 +57,8 @@ nav.cm-navigation
           li
             a(href="connectors/", role='treeitem', data-link = 'true') Connectors
       li.cm-menu__list__item(class=h.maybeActive(navPath, "examples/"))
-        a(aria-controls='dropdown-3', aria-expanded='false', data-toggle-dropdown='dropdown-3', class="dropdown-toggler") Examples <span class="glyph">&#x25BC;</span>
-        ul#dropdown-3.simple-dropdown(role='tree', tabindex='-1')
+        a(aria-controls='dropdown-4', aria-expanded='false', data-toggle-dropdown='dropdown-4', class="dropdown-toggler") Examples <span class="glyph">&#x25BC;</span>
+        ul#dropdown-4.simple-dropdown(role='tree', tabindex='-1')
           li
             a(href="examples/Demos.html", role='treeitem', data-link = 'true') Demos
           li
