docs(GettingStarted): fix urls

--- a/docgen/layouts/common/header.pug
+++ b/docgen/layouts/common/header.pug
@@ -35,9 +35,9 @@ nav.cm-navigation
         a(aria-controls='dropdown-1', aria-expanded='false', data-toggle-dropdown='dropdown-1', class="dropdown-toggler") Getting Started <span class="glyph">&#x25BC;</span>
         ul#dropdown-1.simple-dropdown(role='tree', tabindex='-1')
           li
-            a(href="Getting_Started.html", role='treeitem', data-link = 'true') React
+            a(href="Getting_started.html", role='treeitem', data-link = 'true') React
           li
-            a(href="Getting_Started_React_Native.html", role='treeitem', data-link = 'true') React Native
+            a(href="Getting_started_React_native.html", role='treeitem', data-link = 'true') React Native
       li.cm-menu__list__item(class=h.maybeActive(navPath, "learn/"))
         a(aria-controls='dropdown-2', aria-expanded='false', data-toggle-dropdown='dropdown-2', class="dropdown-toggler") Learn <span class="glyph">&#x25BC;</span>
         ul#dropdown-2.simple-dropdown(role='tree', tabindex='-1')
