feat(server-side rendering): Add API features for server-side rendering
+ guide
+ examples

--- a/docgen/layouts/common/header.pug
+++ b/docgen/layouts/common/header.pug
@@ -56,6 +56,8 @@ nav.cm-navigation
             a(href="widgets/", role='treeitem', data-link = 'true') Widgets
           li
             a(href="connectors/", role='treeitem', data-link = 'true') Connectors
+          li
+            a(href="server-side-rendering/", role='treeitem', data-link = 'true') Server-side Rendering
       li.cm-menu__list__item(class=h.maybeActive(navPath, "examples/"))
         a(aria-controls='dropdown-4', aria-expanded='false', data-toggle-dropdown='dropdown-4', class="dropdown-toggler") Examples <span class="glyph">&#x25BC;</span>
         ul#dropdown-4.simple-dropdown(role='tree', tabindex='-1')
