fix(react): remove typo around `"" 2` (#220)
* fix(react): remove typo around `"" 2`

linked to #213

* Update _searchbox.shipow.scss

--- a/packages/react-instantsearch-theme-algolia/mixins/_searchbox.shipow.scss
+++ b/packages/react-instantsearch-theme-algolia/mixins/_searchbox.shipow.scss
@@ -123,7 +123,7 @@
       margin-right: -4px;
       height: 100%;
       vertical-align: middle;
-      content: ''2
+      content: '';
     }
 
     &:hover,
