--- a/packages/react-instantsearch-theme-algolia/styles/_SearchBox.scss
+++ b/packages/react-instantsearch-theme-algolia/styles/_SearchBox.scss
@@ -1,19 +1,19 @@
-$main-searchbox-config:(
+$main-searchbox-config: (
   input-width: 300px,
   input-height: 45px,
   border-width: 1px,
   border-radius: 4px,
-  input-border-color: #D4D8E3,
-  input-focus-border-color: #D4D8E3,
-  input-background: #FFFFFF,
-  input-focus-background: #FFFFFF,
+  input-border-color: #d4d8e3,
+  input-focus-border-color: #d4d8e3,
+  input-background: #ffffff,
+  input-focus-background: #ffffff,
   font-size: 14px,
   placeholder-color: #697782,
   icon: sbx-icon-search-13,
   icon-size: 18px,
   icon-position: left,
   icon-color: #bfc7d8,
-  icon-background: #FFFFFF,
+  icon-background: #ffffff,
   icon-background-opacity: 0,
   icon-clear: sbx-icon-clear-3,
   icon-clear-size: 12px
