--- a/packages/react-instantsearch-theme-algolia/style.scss
+++ b/packages/react-instantsearch-theme-algolia/style.scss
@@ -26,18 +26,18 @@
     width: 14px;
     height: 14px;
     background: url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 8 13\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M1.5 1.5l5 4.98-5 5.02\' stroke=\'%23697782\' stroke-width=\'1.5\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\' opacity=\'.4\'/></svg>")no-repeat center center / contain;
-    transform: translateY(-50%)
+    transform: translateY(-50%);
   }
 }
 
 @mixin openCaret() {
   &:after {
     top: 25%;
-    transform: rotate(90deg)
+    transform: rotate(90deg);
   }
 }
 
-@mixin button(){
+@mixin button() {
   background-color: #ffffff;
   box-shadow: 0 1px 1px 0 rgba(85, 95, 110, 0.2) !important;
   border: solid 1px #d4d8e3 !important;
@@ -50,12 +50,11 @@
   outline: none;
 
   &:focus {
-    background: darken(white, 5%)
+    background: darken(white, 5%);
   }
-
 }
 
-@mixin buttonSecondary(){
+@mixin buttonSecondary() {
   padding: 4px 8px;
   border-radius: 4px;
   border: none;
@@ -64,7 +63,7 @@
   background: $main-color;
 }
 
-@mixin buttonTernary(){
+@mixin buttonTernary() {
   background: transparent;
   border: none;
 }
@@ -78,73 +77,79 @@
 }
 
 @mixin placeholder {
-    &::-webkit-input-placeholder {
-        @content;
-    }
+  &::-webkit-input-placeholder {
+    @content;
+  }
 
-    &:-moz-placeholder { /* Firefox 18- */
-        @content;
-    }
+  &:-moz-placeholder {
+    /* Firefox 18- */
+    @content;
+  }
 
-    &::-moz-placeholder {  /* Firefox 19+ */
-        @content;
-    }
+  &::-moz-placeholder {
+    /* Firefox 19+ */
+    @content;
+  }
 
-    &:-ms-input-placeholder {
-        @content;
-    }
-}
-
-@mixin buttonLink(){
-    cursor: pointer;
-}
-
-@mixin disabled(){
-  &[disabled],
-  &:disabled  {
-    opacity: 0.5;
-    pointer-events: none
+  &:-ms-input-placeholder {
+    @content;
   }
 }
 
-@mixin input(){
-    padding: 8px 16px;
-    border-radius: 4px;
-    background-color: #ffffff;
-    border: solid 1px #d4d8e3;
-    appearance: none;
-    appearance: none;
-    background: transparent;
-    border: none;
+@mixin buttonLink() {
+  cursor: pointer;
 }
 
-@mixin select(){
-    appearance: none;
-    background: transparent;
-    border: none;
-    background: #ffffff url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 12 7\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M11 1L6.02 6 1 1\' stroke-width=\'1.5\' stroke=\'%23BFC7D8\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\'/></svg>") no-repeat center right 16px / 10px;
-    box-shadow: 0 1px 1px 0 rgba(85, 95, 110, 0.2);
-    border: solid 1px #d4d8e3;
-    padding: 8px 16px;
-    padding-right: 32px;
-    font-size: 12px;
-    font-weight: 600;
-    text-align: center;
-    color: #697782;
-    transition: background 0.2s ease, box-shadow 0.2s ease;
-    border-radius: 4px;
-    text-align: left;
+@mixin disabled() {
+  &[disabled],
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+}
 
-    &:hover,
-    &:active {
-      box-shadow: none;
-    }
+@mixin input() {
+  padding: 8px 16px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  border: solid 1px #d4d8e3;
+  appearance: none;
+  appearance: none;
+  background: transparent;
+  border: none;
+}
 
-    &:focus,
-    &:active {
-      outline: none;
-      background: darken(white, 5%) url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 12 7\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M11 1L6.02 6 1 1\' stroke-width=\'1.5\' stroke=\'%23BFC7D8\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\'/></svg>") no-repeat center right 16px / 10px
-    }
+@mixin select() {
+  appearance: none;
+  background: transparent;
+  border: none;
+  background: #ffffff
+    url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 12 7\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M11 1L6.02 6 1 1\' stroke-width=\'1.5\' stroke=\'%23BFC7D8\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\'/></svg>")
+    no-repeat center right 16px / 10px;
+  box-shadow: 0 1px 1px 0 rgba(85, 95, 110, 0.2);
+  border: solid 1px #d4d8e3;
+  padding: 8px 16px;
+  padding-right: 32px;
+  font-size: 12px;
+  font-weight: 600;
+  text-align: center;
+  color: #697782;
+  transition: background 0.2s ease, box-shadow 0.2s ease;
+  border-radius: 4px;
+  text-align: left;
+
+  &:hover,
+  &:active {
+    box-shadow: none;
+  }
+
+  &:focus,
+  &:active {
+    outline: none;
+    background: darken(white, 5%)
+      url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 12 7\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M11 1L6.02 6 1 1\' stroke-width=\'1.5\' stroke=\'%23BFC7D8\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\'/></svg>")
+      no-repeat center right 16px / 10px;
+  }
 }
 
 // ------------------------------------
@@ -152,50 +157,49 @@
 // ------------------------------------
 $main-color: #3369e7;
 
-$sffv-searchbox-config:(
-        input-width: 300px,
-        input-height: 32px,
-        border-width: 1px,
-        border-radius: 3px,
-        input-border-color: #D4D8E3,
-        input-focus-border-color: #D4D8E3,
-        input-background: #FFFFFF,
-        input-focus-background: #FFFFFF,
-        font-size: 14px,
-        placeholder-color: #697782,
-        icon: sbx-icon-search-13,
-        icon-size: 14px,
-        icon-position: left,
-        icon-color: #bfc7d8,
-        icon-background: #FFFFFF,
-        icon-background-opacity: 0,
-        icon-clear: sbx-icon-clear-3,
-        icon-clear-size: 12px
+$sffv-searchbox-config: (
+  input-width: 300px,
+  input-height: 32px,
+  border-width: 1px,
+  border-radius: 3px,
+  input-border-color: #d4d8e3,
+  input-focus-border-color: #d4d8e3,
+  input-background: #ffffff,
+  input-focus-background: #ffffff,
+  font-size: 14px,
+  placeholder-color: #697782,
+  icon: sbx-icon-search-13,
+  icon-size: 14px,
+  icon-position: left,
+  icon-color: #bfc7d8,
+  icon-background: #ffffff,
+  icon-background-opacity: 0,
+  icon-clear: sbx-icon-clear-3,
+  icon-clear-size: 12px
 );
 
 // ------------------------------------
 // Import
 // ------------------------------------
 
-@import
-'mixins/searchbox.shipow',
-'styles/InstantSearch',
-'styles/ClearAll',
-'styles/CurrentRefinements',
-'styles/HierarchicalMenu',
-'styles/Hits',
-'styles/Highlight',
-'styles/HitsPerPage',
-'styles/InfiniteHits',
-'styles/Menu',
-'styles/MultiRange',
-'styles/Pagination',
-'styles/PoweredBy',
-'styles/RangeInput',
-'styles/StarRating',
-'styles/RefinementList',
-'styles/SearchBox',
-'styles/SortBy',
-'styles/Stats',
-'styles/Toggle',
-'styles/Panel';
+@import 'mixins/searchbox.shipow',
+  'styles/InstantSearch',
+  'styles/ClearAll',
+  'styles/CurrentRefinements',
+  'styles/HierarchicalMenu',
+  'styles/Hits',
+  'styles/Highlight',
+  'styles/HitsPerPage',
+  'styles/InfiniteHits',
+  'styles/Menu',
+  'styles/MultiRange',
+  'styles/Pagination',
+  'styles/PoweredBy',
+  'styles/RangeInput',
+  'styles/StarRating',
+  'styles/RefinementList',
+  'styles/SearchBox',
+  'styles/SortBy',
+  'styles/Stats',
+  'styles/Toggle',
+  'styles/Panel';
