--- a/packages/react-instantsearch-theme-algolia/styles/_Highlight.scss
+++ b/packages/react-instantsearch-theme-algolia/styles/_Highlight.scss
@@ -1,5 +1,6 @@
 .ais-Highlight {
-  .ais-Highlight__nonHighlighted {}
+  .ais-Highlight__nonHighlighted {
+  }
   .ais-Highlight__highlighted {
     background: lighten($main-color, 30%);
     font-style: normal;
