--- a/packages/react-instantsearch-theme-algolia/styles/_MultiRange.scss
+++ b/packages/react-instantsearch-theme-algolia/styles/_MultiRange.scss
@@ -17,7 +17,8 @@
     border-radius: 100%;
     width: 16px;
     height: 16px;
-    background: #ffffff url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 10 9\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M1 4.88l2.378 2.435L9.046 1.6\' stroke-width=\'1.6\' stroke=\'%23FFF\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\' stroke-linejoin=\'round\'/></svg>")no-repeat 50% / 10px;
+    background: #ffffff
+      url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 10 9\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M1 4.88l2.378 2.435L9.046 1.6\' stroke-width=\'1.6\' stroke=\'%23FFF\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\' stroke-linejoin=\'round\'/></svg>")no-repeat 50% / 10px;
     box-shadow: inset 0 0 0 1px #d4d8e3;
     outline: none;
     vertical-align: middle;
@@ -32,9 +33,10 @@
   }
 
   input[type="radio"]:checked ~ .ais-MultiRange__itemBox {
-    background: $main-color url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 10 9\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M1 4.88l2.378 2.435L9.046 1.6\' stroke-width=\'1.6\' stroke=\'%23FFF\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\' stroke-linejoin=\'round\'/></svg>")no-repeat 50% / 10px;
+    background: $main-color
+      url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 10 9\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M1 4.88l2.378 2.435L9.046 1.6\' stroke-width=\'1.6\' stroke=\'%23FFF\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\' stroke-linejoin=\'round\'/></svg>")no-repeat 50% / 10px;
     border-color: $main-color;
-    box-shadow: none
+    box-shadow: none;
   }
 }
 
@@ -50,10 +52,10 @@
   display: none;
 }
 
-.ais-MultiRange__itemRadioSelected{
+.ais-MultiRange__itemRadioSelected {
 }
 
-.ais-MultiRange__itemLabelSelected{
+.ais-MultiRange__itemLabelSelected {
 }
 
 .ais-MultiRange__itemNoRefinement {
