--- a/packages/react-instantsearch-theme-algolia/styles/_RefinementList.scss
+++ b/packages/react-instantsearch-theme-algolia/styles/_RefinementList.scss
@@ -1,5 +1,4 @@
 .ais-RefinementList__root {
-
 }
 
 .ais-RefinementList__item {
@@ -15,15 +14,17 @@
     border-radius: 3.5px;
     width: 16px;
     height: 16px;
-    background: #ffffff url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 10 9\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M1 4.88l2.378 2.435L9.046 1.6\' stroke-width=\'1.6\' stroke=\'%23FFF\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\' stroke-linejoin=\'round\'/></svg>")no-repeat 50% / 10px;    box-shadow: inset 0 0 0 1px #d4d8e3;
+    background: #ffffff
+      url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 10 9\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M1 4.88l2.378 2.435L9.046 1.6\' stroke-width=\'1.6\' stroke=\'%23FFF\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\' stroke-linejoin=\'round\'/></svg>")no-repeat 50% / 10px;
+    box-shadow: inset 0 0 0 1px #d4d8e3;
     outline: none;
     vertical-align: middle;
     margin-right: 8px;
     transition: all .15s ease;
-
   }
   input[type="checkbox"]:checked ~ .ais-RefinementList__itemBox {
-    background: $main-color url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 10 9\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M1 4.88l2.378 2.435L9.046 1.6\' stroke-width=\'1.6\' stroke=\'%23FFF\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\' stroke-linejoin=\'round\'/></svg>")no-repeat 50% / 10px;
+    background: $main-color
+      url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 10 9\' xmlns=\'http://www.w3.org/2000/svg\'><path d=\'M1 4.88l2.378 2.435L9.046 1.6\' stroke-width=\'1.6\' stroke=\'%23FFF\' fill=\'none\' fill-rule=\'evenodd\' stroke-linecap=\'round\' stroke-linejoin=\'round\'/></svg>")no-repeat 50% / 10px;
     border-color: $main-color;
     box-shadow: none;
   }
@@ -42,7 +43,7 @@
 }
 
 .ais-RefinementList__itemCount {
-  @include counterStyle()
+  @include counterStyle();
 }
 
 .ais-RefinementList__showMore {
@@ -51,7 +52,7 @@
 }
 
 .ais-RefinementList__showMoreDisabled {
-  @include  disabled();
+  @include disabled();
 }
 
 .ais-RefinementList__itemLabelSelected {
@@ -60,10 +61,10 @@
 .ais-RefinementList__itemCountSelected {
 }
 
-.ais-RefinementList__itemCheckbox{
+.ais-RefinementList__itemCheckbox {
 }
 
-.ais-RefinementList__itemCheckboxSelected{
+.ais-RefinementList__itemCheckboxSelected {
 }
 
 .ais-RefinementList__SearchBox {
