feat(Breadcrumb): add a new widget & connector (#228)
* feat(Breadcrumb): create a story

* feat(Breadcrumb): retrieve items in Story

* feat(Breadcrumb): modified the getProvidedProps method in the connector

* feat(Breadcrumb): WIP

* feat(Breadcrumb): WIP

* feat(Breadcrumb): assembleBreadcrumb method

* feat(Breadcrumb): improve assembleBreadcrumb method

* feat(Breadcrumb): minor edits in connectBreadcrumb

* feat(Breadcrumb): added render method

* feat(Breadcrumb): Handled the separator prop

* feat(Breadcrumb): separator prop can be a string or a React Component

* feat(Breadcrumb): Added VirtualHierarchicalMenu + Refactored HierarchicalMenuLogic

* feat(Breadcrumb): Make tests pass!

* feat(Breadcrumb): Make component tests pass

* feat(Breadcrumb): disable click on the last item

* feat(Breadcrumb): added rootURL

* feat(Breadcrumb): add tests for rootURL

* feat(Breadcrumb): Added translation for rootURL + playground story

* feat(Breadcrumb): Added translation test

* feat(Breadcrumb): Added a story for the separator-custom element

* feat(Breadcrumb): Add custom React Component test for separator

* feat(Breadcrumb): Changed the translation name to "rootLabel"

* feat(Breadcrumb): Minor change in PropTypes

* feat(Breadcrumb): Add style

* feat(Breadcrumb): Minor modification to the playground story

* feat(Breadcrumb): Minor modifications to tests and style

* feat(Breadcrumb): review WIP

* feat(Breadcrumb): some cleanup

* feat(Breadcrumb): review

* feat(Breadcrumb): some fixes

* feat(Breadcrumb): remove hierarchicalMenuLogic file

* feat(Breadcrumb): modified the structure, putting the separator in between 2 elements

* Update style.scss

* feat(Breadcrumb): add snapshot

* feat(Breadcrumb): minor edits to doc and story + update yarn lock

* feat(Breadcrumb): changed div to span

* feat(Breadcrumb): changed to root div

* feat(Breadcrumb): update test

* feat(Breadcrumb): 

--- a/packages/react-instantsearch-theme-algolia/style.scss
+++ b/packages/react-instantsearch-theme-algolia/style.scss
@@ -184,6 +184,7 @@ $sffv-searchbox-config: (
 
 @import 'mixins/searchbox.shipow',
   'styles/InstantSearch',
+  'styles/Breadcrumb',
   'styles/ClearAll',
   'styles/CurrentRefinements',
   'styles/HierarchicalMenu',
