fix(InfiniteHits): add disabled style to the LoadMore button (#477)
* fix(InfiniteHits): add disabled style to the LoadMore button

* fix(InfiniteHits): remove the need for an extra selector

--- a/packages/react-instantsearch-theme-algolia/styles/_InfiniteHits.scss
+++ b/packages/react-instantsearch-theme-algolia/styles/_InfiniteHits.scss
@@ -1,7 +1,8 @@
 .ais-InfiniteHits__root {
 }
 
-.ais-InfiniteHits__root button {
+.ais-InfiniteHits__loadMore {
   @include buttonTernary();
   @include buttonLink();
+  @include disabled();
 }
