feat(MenuSelect): add component and connector
* feat(components): add <MenuSelect />

* feat(widgets): add MenuSelect

* feat(dom): export MenuSelect widget

* fix(MenuSelect): use another value for "See all" option

* doc(storybook): add MenuSelect stories

* test(MenuSelect): update snapshot

* doc(MenuSelect): remove className root not existing

* style(MenuSelect): apply select theme

* test(MenuSelect): remove un-used import

* doc(MenuSelect): re-write classes description

--- a/packages/react-instantsearch-theme-algolia/style.scss
+++ b/packages/react-instantsearch-theme-algolia/style.scss
@@ -193,6 +193,7 @@ $sffv-searchbox-config: (
   'styles/HitsPerPage',
   'styles/InfiniteHits',
   'styles/Menu',
+  'styles/MenuSelect',
   'styles/MultiRange',
   'styles/Pagination',
   'styles/PoweredBy',
