fix(Range): handle float, allow reset and respect boundaries
* feat(RangeInput): handle min / max validation on input

* refactor(RangeInput): remove useless stop propagation call

* chore(deps): add enzyme to JSON

* refactor(RangeInput): handle min / max as placeholder + validation on input

* refactor(RangeInput): always send values to refine

* refactor(RangeInput): remove unused import

* chore(stories): sort RangeInput stories

* refactor(connectRange): handle boundaries on refine

* refactor(connectRange): throw an error when default refinement is out of range

* fix(RangeInput): update placeholder color same as SeachBox

* refactor(RangeInput): throw error on refine earlier

* feat(RangeInput): handle precision with step

* feat(connectRange): add precision props

* refactor(connectRange): compute range with precision

* refactor(connectRange): compute current refinement from range

* refactor(connectRange): avoid useless variable and simplify test

* chore(stories): add RangeInput story for precision

* chore: add enzyme to json to serializer

* refactor: remove unused variable

* chore(stories): remove min/max from RangeInput precision story

* fix(RangeInput): display range & value only when canRefine is true

* docs(RangeInput): add precision option

* fix(Stories): add missing precision props to RangeInput playground

* refactor(connectRange): extract computation of next value

* feat(connectRange): handle range with precision always with the same behaviour

* refactor(connectRange): use 2 as default precision

* docs(RangeInput): use 2 as default precision

* refactor(stories): update story with precision of 0

--- a/packages/react-instantsearch-theme-algolia/styles/_RangeInput.scss
+++ b/packages/react-instantsearch-theme-algolia/styles/_RangeInput.scss
@@ -19,14 +19,15 @@
   padding: 6px 8px;
   font-size: 14px;
   outline: none;
-  color: #697782;
   margin: auto 8px;
   border-radius: 4px;
   background-color: #ffffff;
   border: solid 1px #d4d8e3;
+  min-width: 180px;
 
   @include placeholder {
     font-size: 14px;
+    color: lighten(#697782, 20%);
   }
 
   &:hover,
