docs(website): add edit this page button (#517)

--- a/docgen/src/stylesheets/components/_documentation.sass
+++ b/docgen/src/stylesheets/components/_documentation.sass
@@ -254,7 +254,7 @@ $offset-height: 60px
 
     &:hover
       background: $accent-color
-      color: $bunting
+      color: #fff
       opacity: 1
       text-decoration: none
   +small-mq
