Fix DocGen DOM (#610)

--- a/docgen/layouts/archetypes/single-column-formatted.pug
+++ b/docgen/layouts/archetypes/single-column-formatted.pug
@@ -9,3 +9,4 @@ body.documentation
   include ../common/footer.pug
   script(src=webpack.assets['js/common.js'])
   script(src=webpack.assets['js/main.js'])
+</html>
