--- a/docgen/layouts/common/meta.pug
+++ b/docgen/layouts/common/meta.pug
@@ -5,32 +5,33 @@
 - var project_desc = project + " - " + description
 - var short_desc     = "⚡ Lightning-fast search for React and React Native apps"
 
-doctype html
-html
-  head
-    base(href=publicPath)
-    meta(content='IE=edge', http-equiv='X-UA-Compatible')
-    meta(charset='utf-8')
-    meta(content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no', name='viewport')
-    link(rel='icon', href="assets/img/favicon.png")
-    meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
-    meta(content=long_desc, name='description')
-    meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
-    // / Twitter card
-    meta(content='summary_large_image', name='twitter:card')
-    meta(content=url, name='twitter:site')
-    meta(content='Algolia', name='twitter:creator')
-    meta(content=project, name='twitter:title')
-    meta(content=short_desc, name='twitter:description')
-    meta(content=image, name='twitter:image')
-    // / OG meta
-    meta(content=url, property='og:url')
-    meta(content=project, property='og:title')
-    meta(content=image, property='og:image')
-    meta(content='website', property='og:type')
-    meta(content=short_desc, property='og:description')
-    meta(content=project, property='og:site_name')
+<!DOCTYPE html>
+<html>
 
-    title #{project} | #{short_desc}
-    link(rel="stylesheet", href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css")
-    link(rel='stylesheet', href="stylesheets/index.css")
+head
+  base(href=publicPath)
+  meta(content='IE=edge', http-equiv='X-UA-Compatible')
+  meta(charset='utf-8')
+  meta(content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no', name='viewport')
+  link(rel='icon', href="assets/img/favicon.png")
+  meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
+  meta(content=long_desc, name='description')
+  meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
+  // / Twitter card
+  meta(content='summary_large_image', name='twitter:card')
+  meta(content=url, name='twitter:site')
+  meta(content='Algolia', name='twitter:creator')
+  meta(content=project, name='twitter:title')
+  meta(content=short_desc, name='twitter:description')
+  meta(content=image, name='twitter:image')
+  // / OG meta
+  meta(content=url, property='og:url')
+  meta(content=project, property='og:title')
+  meta(content=image, property='og:image')
+  meta(content='website', property='og:type')
+  meta(content=short_desc, property='og:description')
+  meta(content=project, property='og:site_name')
+
+  title #{project} | #{short_desc}
+  link(rel="stylesheet", href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css")
+  link(rel='stylesheet', href="stylesheets/index.css")
