--- a/packages/react-instantsearch-theme-algolia/styles/_SearchBox.scss
+++ b/packages/react-instantsearch-theme-algolia/styles/_SearchBox.scss
@@ -22,3 +22,34 @@ $main-searchbox-config: (
 .ais-SearchBox {
   @include searchbox($main-searchbox-config...);
 }
+
+.ais-SearchBox__loading-indicator {
+  position: absolute;
+  top: 0;
+  right: inherit;
+  left: 0;
+  margin: 0;
+  border: 0;
+  border-radius: 4px 0 0 4px;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0;
+  width: 46px;
+  height: 100%;
+  vertical-align: middle;
+  text-align: center;
+  font-size: inherit;
+}
+
+.ais-SearchBox__loading-indicator::before {
+  display: inline-block;
+  margin-right: -4px;
+  height: 100%;
+  vertical-align: middle;
+  content: '';
+}
+
+.ais-SearchBox__loading-indicator > svg {
+  height: 1.3em;
+  width: 1.3em;
+  margin-top: 1em;
+}
